clusters/talos-cluster/tdarr/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: tdarr-node
  labels:
    app: tdarr-node
spec:
  selector:
    matchLabels:
      app: tdarr-node
  template:
    metadata:
      labels:
        app: tdarr-node
    spec:
      containers:
        - name: tdarr-node
          image: ghcr.io/haveagitgat/tdarr_node:latest
          resources:
            limits:
              cpu: "2"
              memory: 4Gi
            requests:
              cpu: "1"
              memory: 2Gi
          volumeMounts:
            - name: tdarr-media
              mountPath: /media
            - name: tdarr-cache-data
              mountPath: /temp
            - name: tdarr-data
              mountPath: /app
      volumes:
        - name: tdarr-data
          persistentVolumeClaim:
            claimName: tdarr-data
        - name: tdarr-cache-data
          persistentVolumeClaim:
            claimName: tdarr-cache-data
        - name: tdarr-media
          persistentVolumeClaim:
            claimName: tdarr-media
