clusters/talos-cluster/tdarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdarr
  namespace: tdarr
  labels:
    app: tdarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tdarr
  template:
    metadata:
      name: tdarr
      labels:
        app: tdarr
    spec:
      restartPolicy: Always
      containers:
        - name: tdarr
          image: ghcr.io/haveagitgat/tdarr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8265
              name: WebUI
              protocol: TCP
            - containerPort: 8266
              name: API
              protocol: TCP
          volumeMounts:
            - name: tdarr-data
              mountPath: /app
            - name: tdarr-cache-data
              mountPath: /temp
            - name: tdarr-media
              mountPath: /media
      volumes:
        - name: tdarr-data
          persistentVolumeClaim:
            claimName: tdarr-data
        - name: tdarr-cache-data
          persistentVolumeClaim:
            claimName: tdarr-cache-data
        - name: tdarr-media
          persistentVolumeClaim:
            claimName: tdarr-media
