clusters/talos-cluster/tdarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdarr-service
  namespace: tdarr
spec:
  selector:
    app: tdarr-node
  ports:
    - name: webui
      port: 8265
      targetPort: 8265
    - name: api
      port: 8266
      targetPort: 8266
