clusters/talos-cluster/tdarr/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tdarr-route
  namespace: tdarr
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - "tdarr.horus.ossai.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tdarr-service
          port: 8265
